fix vertical align

--- a/wetty-chat-mobile/src/components/chat/ChatBubble.module.scss
+++ b/wetty-chat-mobile/src/components/chat/ChatBubble.module.scss
@@ -158,7 +158,7 @@
   }
 
   .gender {
-    font-weight: 800;
+    height: initial;
   }
 
   .gender1 {
